# asyncord

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  README.rst  mkdocs.yml  pyproject.toml  test_get_core_schema.py
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json  post-create.sh
.github/workflows/: deploy_docs.yml  python-package.yml  release.yml  tests.yml
asyncord/: __init__.py  base64_image.py  client_hub.py  color.py  fbenum.py  locale.py  logger.py  snowflake.py  typedefs.py  urls.py  yarl_url.py
asyncord/client/: applications.py  bans.py  channels.py  client_errors.py  commands.py  gateway.py  guilds.py  headers.py  http_client.py  http_proto.py  interactions.py  members.py  messages.py  ports.py  reactions.py  resources.py  rest.py  roles.py  scheduled_events.py  users.py  ws_client.py
asyncord/client/applications/: models.py  resources.py
asyncord/client/applications/models/: common.py  requests.py  responses.py
asyncord/client/auth/: models.py  oauth.py  resources.py
asyncord/client/bans/: models.py  resources.py
asyncord/client/bans/models/: responses.py
asyncord/client/channels/: resources.py
asyncord/client/channels/models/: __init__.py  channel_create.py  channel_update.py  common.py  output.py  responses.py
asyncord/client/commands/: resources.py
asyncord/client/commands/models/: __init__.py  commands.py  common.py  input.py  output.py  requests.py  responses.py
asyncord/client/emojis/: resources.py
asyncord/client/emojis/models/: requests.py  responses.py
asyncord/client/guild_templates/: resources.py
asyncord/client/guild_templates/models/: requests.py  responses.py
asyncord/client/guilds/: models.py  resources.py
asyncord/client/guilds/models/: common.py  requests.py  responses.py
asyncord/client/http/: bucket_track.py  client.py  error_codes.py  errors.py  headers.py  middleware.py  models.py  request_handler.py
asyncord/client/http/middleware/: auth.py  base.py  errors.py  ratelimit.py
asyncord/client/interactions/: models.py  resources.py
asyncord/client/interactions/models/: common.py  input.py  requests.py
asyncord/client/invites/: resources.py
asyncord/client/members/: models.py  resources.py
asyncord/client/members/models/: common.py  requests.py  responses.py
asyncord/client/messages/: resources.py
asyncord/client/messages/models/: common.py  components.py  (+7 more)
asyncord/client/models/: activities.py  activity.py  applications.py  attachments.py  automoderation.py  bans.py  channel_data.py  channels.py  commands.py  components.py  emoji.py  gateway_events.py  guilds.py  intents.py  interactions.py  invites.py  member.py  members.py  messages.py  permissions.py  roles.py  schedule.py  scheduled_events.py  stickers.py  users.py
asyncord/client/polls/: resources.py
asyncord/client/reactions/: resources.py
asyncord/client/roles/: models.py  resources.py
asyncord/client/scheduled_events/: models.py  resources.py
asyncord/client/stage_instances/: resources.py
asyncord/client/stickers/: resources.py
asyncord/client/threads/: resources.py
asyncord/client/users/: models.py  resources.py
asyncord/client/webhooks/: resources.py
asyncord/gateway/: client.py  commands.py  dispatcher.py  errors.py  gw_proto.py  hearbeat.py  intents.py  message.py
asyncord/gateway/client/: client.py  commander.py  conn_data.py  connection.py  errors.py  handler.py  heartbeat.py  opcode_handlers.py
asyncord/gateway/events/: application.py  base.py  channels.py  event_map.py  guilds.py  interactions.py  invites.py  messages.py  moderation.py  presence.py  schedule.py  scheduled_events.py
asyncord/gateway/messages/: message.py
asyncord/old_client/: base.py  client.py  guilds.py  http_client.py  proto.py  token.py
asyncord/old_client/http_client/: sync_http.py
asyncord/rest/: http_client.py  intents.py  tokent.py
docs/: faq.md  getting_started.md  index.md  mkdocs.yml
docs/api_reference/: client.md
docs/async_docs/: client_hub.md
docs/async_docs/gw/: dispatcher.md  docs.md  heartbeat.md
docs/async_docs/rest/: docs.md
docs/deploy/: hosts.ini  run_deploy.yaml
docs/examples/: buttons.md  embeds.md  mov.md  reactions.md
docs/get_start/: main.md  why_asyncord.md
docs/pages/: index.md
docs/pages/reference/: index.md
docs/reference/: client.md  overview.md
docs/source/: conf.py  getting_started.rst  index.rst
examples/: commands.py
examples/echo/: echo.py  pyproject.toml
examples/gallery/: __main__.py  gallery_archivator.py  pyproject.toml
examples/help_desk/: help_desk.py  pyproject.toml
examples/levels/: levels.py  pyproject.toml
examples/neuro_react/: neuro_react.py  pyproject.toml
examples/reactions_bot/: commands.py  main.py
examples/trivia_bot/: __main__.py  commands.py
examples/weather_embed/: __main__.py  commands.py  models.py
scritps/: version.py
tests/: conftest.py  test_base64_image.py  test_client_hub.py  test_color.py  test_fbenum.py  test_heartbeat.py  test_http_client.py  test_hub.py  test_middlewares.py  test_permission_flag.py  test_snowflake.py  test_strflag.py  test_url.py
tests/client/: test_interactions.py  test_rest.py
tests/gateway/: conftest.py  test_client.py  test_connection_data.py  test_dispatcher.py  test_heartbeat.py  test_heartbeat_factory.py  test_opcode_handlers.py
tests/integration/: conftest.py  test_bans.py  test_channels.py  test_commands.py  test_guilds.py  test_members.py  test_messages.py  test_reactions.py  test_roles.py
tests/integration/client/: conftest.py  test_applications.py  test_bans.py  test_channels.py  test_commands.py  test_emoji.py  test_guild_templates.py  test_guilds.py  test_invites.py  test_members.py  test_polls.py  test_reactions.py  test_roles.py  test_scheduled_events.py  test_stages_instances.py  test_stickers.py  test_threads.py  test_users.py  test_webhooks.py
tests/integration/messages/: conftest.py  test_attachments.py  test_components.py  test_messages.py
tests/middlewares/: conftest.py  test_error.py  test_ratelimit.py
(+96 files in other folders)
