[build-system]
requires = ["pdm-backend", "gitpython>=3.1.43"]
build-backend = "pdm.backend"

[project]
name = "asyncord"
description = "A smart and powerful base for creating discord bots and interaction with the API."
authors = [{ name = "Vadim Suharnikov", email = "vsuharnikov@gmail.com" }]
urls = { homepage = "https://github.com/suharnikov/asyncord", repository = "https://github.com/suharnikov/asyncord" }

readme = "README.rst"
license = { text = "MIT" }

requires-python = ">=3.12.0"
dependencies = [
    "yarl>=1.8.1",
    "rich>=12.5.1",
    "pydantic>=2.4.2",
    "aiohttp<4",
    "filetype>=1.2.0",
    "fbenum>=1.0.1",
]

dynamic = ["version"]

[dependency-groups]
dev = [
    "python-git>=2018.2.1",
    "pre-commit>=3.3.2",
    "ruff>=0.4.4",
    "gitpython>=3.1.43",
]
testing = [
    "pytest>=7.3.1",
    "pytest-asyncio>=0.19.0,<0.23.0", # 0.23.0 has a bugs with scopes
    "pytest-pretty>=1.2.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.6.1",
    "pytest-cov>=5.0.0",
]
docs = ["sphinx-material>=0.0.36", "sphinx>=8.0.2"]

[tool.uv.workspace]
members = ["examples/echo", "examples/levels", "examples/help_desk", "examples/gallery"]

[tool.uv]
default-groups = ["dev", "testing"]

[tool.pdm.version]
source = "call"
getter = "scritps.version:get_version"

[tool.pytest.ini_options]
minversion = "6.2"
addopts = "-ra --dist=loadscope --color=yes"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "^class .*\\(Protocol\\):$",
    "if reason:",
    "@overload",
    "NotImplementedError",
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"
extend-exclude = [".git", ".vscode", ".devcontainer", ".github", ".venv"]

[tool.ruff.lint]
preview = true
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "D",
    "E",
    "W",
    # isort
    "I",
    # pep8-naming
    "N",
    # flake8-bugbear
    "B",
    # pyupgrade
    "UP",
    # flake8-annotations
    "ANN",
    # flake8-bandit
    "S",
    # flake8-commas
    "COM",
    # flake8-datetimez
    "DTZ",
    # flake8-future-annotations
    "FA",
    # flake8-implicit-str-concat
    "ISC",
    # flake8-logging-format
    "G",
    # implicit-namespace-package
    "INP001",
    # flake8-pie
    "PIE",
    # flake8-print
    "T20",
    # flake8-pyi
    "PYI",
    # flake8-pytest-style
    "PT",
    # flake8-quotes
    "Q",
    # flake8-raise
    "RSE",
    # flake8-return
    "RET",
    # flake8-self
    "SLF",
    # flake8-simplify
    "SIM",
    # flake8-tidy-imports
    "TID",
    # flake8-type-checking
    "TCH",
    # flake8-use-pathlib
    "PTH",
    # eradicate
    "ERA",
    # Pylint
    "PL",
    # Ruff-specific rules
    "RUF",
]

ignore = [
    # https://github.com/charliermarsh/ruff/discussions/4542
    # Missing type annotation for {name} in method
    "ANN101",
    "ANN102",
    # Package dosctring check
    "D104",
    # Checks for string literals that are explicitly concatenated (using `+` operator)
    'ISC003',
    # Private member accessed
    'SLF001',
    # First argument of a method should be named `self`
    "N805",
    # It's not work properly for pydantic models
    # Move standard library import `datetime` into a type-checking block
    "TCH001",
    "TCH002",
    "TCH003",
    # Ternary operator make code less readable
    # Use ternary operator {} instead of `if`-`else`-
    "SIM108",
    # Use a single `if` statement instead of nested `if` statementsRuff
    "SIM102",
    # allow rename imported module to the same name to allow unused imports in __init__.py
    "PLC0414",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    # Allow missing module docstring
    "D100",
    # Allow asserts in tests
    "S101",
    # Allow pseudorandom number generator in tests. We do not make any cryptographic operations in tests
    "S311",
    # Checks for iterations over set literals is wrong. Set fits better than list on iteration by values
    "PLC0208",
    # We allow some magic values in the tests. It's acceptable
    "PLR2004",
    # We allow async function without await in tests
    "RUF029",
]
"docs/source/conf.py" = [
    # Allow implicit namespace package
    "INP001",

    "D100",
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.ruff.lint.pydocstyle]
# Use Google-style docstrings.
convention = "google"

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true

[tool.ruff.lint.pylint]
allow-dunder-method-names = ["__get_pydantic_core_schema__"]
max-args = 7

[tool.ruff.format]
preview = true
quote-style = "single"
